a lot of clean-ups
- most of them are suggestions from SonarQube